--- a/toDoAppFrontend/lists.html
+++ b/toDoAppFrontend/lists.html
@@ -9,32 +9,37 @@
     <title> To Do List</title>
 </head>
 <body>
-    <div class="hamburger-menu" id="hamburger">
-        &#9776; <!-- This is the hamburger icon (three horizontal lines) -->
-    </div>
-
-    <nav class="sidebar" id="sidebar">
-        <ul class="sidebar-list">
-            <li class="sidebar-item">
-                <div class="circle plus"></div>
-                <p> Create List </p>
-            </li>
-            <li class="sidebar-item">
-                <div class="container-fa"><i class="fa fa-search"></i></div>
-                <p> Search </p>    
-            </li>
-            <li class="sidebar-item">
-                <div class="gg-arrow-left-o"></div>
-                <p> Back to Lists</p>
-        </ul>
-    </nav>
-    
-    <div class="container">
-            <h2 class="title-list"> Lists </h2>
-            <div class="lists">Hi i am list</div>
-            <div class="lists">Hi i am also list</div>
-            <div class="lists">Hi i am also list</div>
+    <div id = "lists-page">
+        <div class="hamburger-menu" id="hamburger">
+            &#9776; <!-- This is the hamburger icon (three horizontal lines) -->
         </div>
-    </body>
-    <script src="/toDoAppFrontend/website.js"></script>
+
+        <nav class="sidebar" id="sidebar">
+            <ul class="sidebar-list">
+                <li class="sidebar-item">
+                    <div class="circle plus"></div>
+                    <p> Create List </p>
+                </li>
+                <li class="sidebar-item">
+                    <div class="container-fa"><i class="fa fa-search"></i></div>
+                    <p> Search </p>    
+                </li>
+                <li class="sidebar-item" id = "back-to-lists">
+                    <div class="gg-arrow-left-o"></div>
+                    <p> Back to Lists</p>
+            </ul>
+        </nav>
+        
+        <div class="container">
+                <h2 class="title-list"> Lists </h2>
+                <div class="lists">Hi i am list</div>
+                <div class="lists">Hi i am also list</div>
+                <div class="lists">Hi i am also list</div>
+            </div>
+        </body>
+        <script src="/toDoAppFrontend/website.js"></script>
+    </div>
+    <div id = "items-page">
+        <h1>Nothing here yet</h1>
+    </div>
 </body>
